<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|bottom"
    android:background="@color/white"
    tools:ignore="Overdraw">


    <ImageButton
        android:id="@+id/navigation_image_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:contentDescription="@string/start_navigation_icon"
        android:src="@drawable/ic_navigation_black_24dp"
        tools:layout_editor_absoluteX="352dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        app:layout_constraintEnd_toEndOf="@id/navigation_image_button"
        app:layout_constraintStart_toStartOf="@id/navigation_image_button"
        app:layout_constraintTop_toBottomOf="@id/navigation_image_button" />

    <ImageButton
        android:id="@+id/favorites_image_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:contentDescription="@string/favorites_icon"
        android:src="@drawable/ic_star_black_24dp"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites"
        app:layout_constraintEnd_toEndOf="@id/favorites_image_button"
        app:layout_constraintStart_toStartOf="@id/favorites_image_button"
        app:layout_constraintTop_toBottomOf="@id/favorites_image_button" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>