<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="8dp"
    android:orientation="vertical"
    android:padding="0dp"
    android:theme="@style/InfoWindowTheme">

    <ImageView
        android:id="@+id/header_background_iv"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/stop_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp8"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="hola"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/header_background_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/go_to_bus_stop_info_im"
        android:layout_width="24dp"
        android:layout_height="21dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimaryDark"
        android:src="@drawable/ic_cancel_black_24dp"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/header_background_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/division_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direction_tag"
        app:srcCompat="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/line_tag_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/line_tv_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_background_iv" />

    <TextView
        android:id="@+id/direction_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/direction_tv_tag"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_background_iv" />

    <TextView
        android:id="@+id/waiting_time_label"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/waiting_time_tv_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_background_iv" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/bus_schedules_info_window_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/division_line" />

    <ImageView
        android:id="@+id/division_line_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bus_schedules_info_window_rv"
        app:srcCompat="@color/colorPrimaryDark" />

    <ImageButton
        android:id="@+id/start_navigation_iv_info_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_navigation_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/center_guideline"
        app:layout_constraintTop_toBottomOf="@id/division_line_bottom" />

    <ImageButton
        android:id="@+id/favorites_iv_info_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star_black_24dp"
        app:layout_constraintStart_toEndOf="@id/center_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/division_line_bottom"/>

    <android.support.constraint.Guideline
        android:id="@+id/center_guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />


</android.support.constraint.ConstraintLayout>